// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design System/Pagination PaginationStory smoke-test 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  color: #0f0f17;
}

.emotion-2>* {
  padding: 0.5rem;
}

.emotion-3 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-4 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #1552DD;
  background-color: rgba(84,94,255,0);
  padding: 0.5rem;
  border-radius: 2.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-4:focus-visible:not(:disabled) {
  background-color: rgba(84,94,255,0.06);
}

.emotion-4:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-4:hover:not(:disabled) {
  background-color: rgba(84,94,255,0.06);
}

.emotion-4:active:not(:disabled) {
  background-color: rgba(84,94,255,0.14);
}

.emotion-5 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 {
  fill: #1552DD;
  width: 1rem;
  height: 1rem;
}

.emotion-6 path {
  fill: #1552DD;
}

<html>
  <head />
  <body>
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            class="emotion-3"
          >
            <button
              class="emotion-4"
              data-testid="icon-button"
              disabled=""
              type="button"
            >
              <span
                class="emotion-5"
              >
                <svg
                  class="emotion-6"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                  xmlns:xlink="http://www.w3.org/1999/xlink"
                >
                  <g
                    fill-rule="evenodd"
                    id="pagination_start"
                    stroke="none"
                    stroke-width="1"
                  >
                    <polygon
                      fill-rule="nonzero"
                      id="Path"
                      points="25 6 25 17 23 17 23 7.999 14 8 14 6"
                      transform="translate(19.500000, 11.500000) rotate(-135.000000) translate(-19.500000, -11.500000) "
                    />
                    <polygon
                      fill-rule="nonzero"
                      id="Line"
                      points="8 4 8 20 6 20 6 4"
                    />
                  </g>
                </svg>
              </span>
            </button>
          </div>
          <div
            class="emotion-3"
          >
            <button
              class="emotion-4"
              data-testid="icon-button"
              disabled=""
              type="button"
            >
              <span
                class="emotion-5"
              >
                <svg
                  class="emotion-6"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                  xmlns:xlink="http://www.w3.org/1999/xlink"
                >
                  <g
                    fill-rule="evenodd"
                    id="arrow_left"
                    stroke="none"
                    stroke-width="1"
                  >
                    <polygon
                      fill-rule="nonzero"
                      id="Path"
                      points="21 6 21 17 19 17 19 7.999 10 8 10 6"
                      transform="translate(15.500000, 11.500000) rotate(-135.000000) translate(-15.500000, -11.500000) "
                    />
                  </g>
                </svg>
              </span>
            </button>
          </div>
          <div>
            Page 1 of 3
          </div>
          <div
            class="emotion-3"
          >
            <button
              class="emotion-4"
              data-testid="icon-button"
              type="button"
            >
              <span
                class="emotion-5"
              >
                <svg
                  class="emotion-6"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                  xmlns:xlink="http://www.w3.org/1999/xlink"
                >
                  <g
                    fill-rule="evenodd"
                    id="arrow_right"
                    stroke="none"
                    stroke-width="1"
                  >
                    <polygon
                      fill-rule="nonzero"
                      id="Path"
                      points="15 6 15 17 13 17 13 7.999 4 8 4 6"
                      transform="translate(9.500000, 11.500000) scale(-1, 1) rotate(-135.000000) translate(-9.500000, -11.500000) "
                    />
                  </g>
                </svg>
              </span>
            </button>
          </div>
          <div
            class="emotion-3"
          >
            <button
              class="emotion-4"
              data-testid="icon-button"
              type="button"
            >
              <span
                class="emotion-5"
              >
                <svg
                  class="emotion-6"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                  xmlns:xlink="http://www.w3.org/1999/xlink"
                >
                  <g
                    fill-rule="evenodd"
                    id="pagination_end"
                    stroke="none"
                    stroke-width="1"
                  >
                    <polygon
                      fill-rule="nonzero"
                      id="Path"
                      points="11 6 11 17 9 17 9 7.999 0 8 0 6"
                      transform="translate(5.500000, 11.500000) scale(-1, 1) rotate(-135.000000) translate(-5.500000, -11.500000) "
                    />
                    <polygon
                      fill-rule="nonzero"
                      id="Line"
                      points="18 4 18 20 16 20 16 4"
                    />
                  </g>
                </svg>
              </span>
            </button>
          </div>
        </div>
      </span>
    </span>
  </body>
</html>
`;

exports[`Design System/Pagination PaginationWithoutAllButtons smoke-test 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  color: #0f0f17;
}

.emotion-2>* {
  padding: 0.5rem;
}

.emotion-3 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-4 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #1552DD;
  background-color: rgba(84,94,255,0);
  padding: 0.5rem;
  border-radius: 2.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-4:focus-visible:not(:disabled) {
  background-color: rgba(84,94,255,0.06);
}

.emotion-4:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-4:hover:not(:disabled) {
  background-color: rgba(84,94,255,0.06);
}

.emotion-4:active:not(:disabled) {
  background-color: rgba(84,94,255,0.14);
}

.emotion-5 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 {
  fill: #1552DD;
  width: 1rem;
  height: 1rem;
}

.emotion-6 path {
  fill: #1552DD;
}

<html>
  <head />
  <body>
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            class="emotion-3"
          >
            <button
              class="emotion-4"
              data-testid="icon-button"
              disabled=""
              type="button"
            >
              <span
                class="emotion-5"
              >
                <svg
                  class="emotion-6"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                  xmlns:xlink="http://www.w3.org/1999/xlink"
                >
                  <g
                    fill-rule="evenodd"
                    id="arrow_left"
                    stroke="none"
                    stroke-width="1"
                  >
                    <polygon
                      fill-rule="nonzero"
                      id="Path"
                      points="21 6 21 17 19 17 19 7.999 10 8 10 6"
                      transform="translate(15.500000, 11.500000) rotate(-135.000000) translate(-15.500000, -11.500000) "
                    />
                  </g>
                </svg>
              </span>
            </button>
          </div>
          <div>
            Page 1 of 3
          </div>
          <div
            class="emotion-3"
          >
            <button
              class="emotion-4"
              data-testid="icon-button"
              type="button"
            >
              <span
                class="emotion-5"
              >
                <svg
                  class="emotion-6"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                  xmlns:xlink="http://www.w3.org/1999/xlink"
                >
                  <g
                    fill-rule="evenodd"
                    id="arrow_right"
                    stroke="none"
                    stroke-width="1"
                  >
                    <polygon
                      fill-rule="nonzero"
                      id="Path"
                      points="15 6 15 17 13 17 13 7.999 4 8 4 6"
                      transform="translate(9.500000, 11.500000) scale(-1, 1) rotate(-135.000000) translate(-9.500000, -11.500000) "
                    />
                  </g>
                </svg>
              </span>
            </button>
          </div>
        </div>
      </span>
    </span>
  </body>
</html>
`;
